add user entities
